--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/main.css">
+    <!---owl CSS-->
+    <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
+    <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
+    <!----responsividade-->
+    <link rel="stylesheet" href="style/resposive.css">
+
     <title>NETFLIX-CLONE</title>
 </head>
 <body>
@@ -25,9 +31,11 @@
                     <p class="descricao">Um político inescrupuloso não mede esforços para conquistar o poder nos EUA neste drama vencedor do Emmy e do Globo de Ouro. Assista agora a nova temporada de House Of Cards que está imperdível.</p>
                         <div class="botoes">
                             <button role="button" class="botao">
+                                <i class="fas fa-play"></i>
                                 ASSISTIR AGORA
                             </button>
                             <button role="button" class="botao">
+                                <i class="fas fa-info-circle"></i>
                                 MAIS INFORMAÇÕES
                             </BUTton>
                         </div>
@@ -35,7 +43,60 @@
             
         </div>
     </main>
+    <div class="carrosel-filmes">
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <img class="box-filme" src="img/mini-01.jpg" alt="" srcset="">
+
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini-02.jpg" alt="" srcset="">
+
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini-03.jpg" alt="" srcset="">
+
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini-04.jpg" alt="" srcset="">
+
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini-05.jpg" alt="" srcset="">
+
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini-06.jpg" alt="" srcset="">
+
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini-07.jpg" alt="" srcset="">
+
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini-08.jpg" alt="" srcset="">
+
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini-09.jpg" alt="" srcset="">
+
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/mini-010.jpg" alt="" srcset="">
+
+            </div>
+
+
+
+
+        </div>
+    </div>
+
    
+    <script src="https://kit.fontawesome.com/ed68db0b6a.js" crossorigin="anonymous"></script>
+    <script src="js/owl/jquery.min.js"></script> <!--chama o arquivo JQuery do OWL--->
+    <script src="js/owl/owl.carousel.min.js"></script> <!--chama o arquivo carousel do OWL --->
+    <script src="js/owl/setup.js"></script> <!---chama o SETUP.js que é o aquivo que configura as ações do carrosel como por exemplo torna-lo infinito.--->
 </body>
    
 <footer>
